--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [白俄罗斯劫持一架国际航班以逮捕机上异见人士 布林肯：此举令人震惊](/articles/voa/1040599.md)
+
+5-24 [史密森尼学会重开八个博物馆](/articles/voa/1040600.md)
+
 5-24 [纽约市骑士为自行车祈福之余自求多福](/articles/voa/1040601.md)
 
 5-24 [塔利班发动袭击威胁阿富汗省会](/articles/voa/1040602.md)
@@ -596,8 +600,4 @@
 5-11 [北京称蔡英文丹麦民主峰会讲话为“政治闹剧” 丹麦外相说普世价值观越受压力越要站稳](/articles/voa/1040897.md)
 
 5-11 [哈马斯向耶路撒冷发射火箭 以色列空袭加沙](/articles/voa/1040898.md)
-
-5-11 [世卫组织：印度出现的新冠病毒变种令全球关注](/articles/voa/1040899.md)
-
-5-11 [FBI确认“黑暗面”勒索软件对殖民管道网络遇袭负责 白宫或就是否支付赎金提供建议](/articles/voa/1040900.md)
 
