--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-24 [白俄罗斯记者： 这里等着我的是死刑](/articles/dw/1042314.md)
+
+5-24 [白俄罗斯「诈」弹诱捕記者 引爆欧美怒火](/articles/dw/1042315.md)
+
 5-24 [美媒：武汉病毒研究所人员2019年11月曾就医](/articles/dw/1042316.md)
 
 5-24 [墙外文摘：台湾防疫，优势如何战胜劣势？](/articles/dw/1042317.md)
@@ -596,8 +600,4 @@
 5-6 [再次反击：中国暂停中澳战略经济对话活动](/articles/dw/1042612.md)
 
 5-6 [美国支持暂时放弃疫苗专利权 欧盟积极回应](/articles/dw/1042613.md)
-
-5-6 [中国驳回对其运载火箭残骸的安全警告](/articles/dw/1042614.md)
-
-5-6 [德语媒体：默克尔总理的败笔](/articles/dw/1042615.md)
 
