--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [不只「疫苗外交」台湾拉美邦交国的「究极选择」](/articles/dw/1042313.md)
+
 5-24 [白俄罗斯记者： 这里等着我的是死刑](/articles/dw/1042314.md)
 
 5-24 [白俄罗斯「诈」弹诱捕記者 引爆欧美怒火](/articles/dw/1042315.md)
@@ -598,6 +600,4 @@
 5-6 [匈牙利阻挠欧盟谴责香港选举法改革](/articles/dw/1042611.md)
 
 5-6 [再次反击：中国暂停中澳战略经济对话活动](/articles/dw/1042612.md)
-
-5-6 [美国支持暂时放弃疫苗专利权 欧盟积极回应](/articles/dw/1042613.md)
 
