--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-24 [“学党史颂党恩跟党走”闽南佛学院藉演讲为中共唱赞歌](/articles/rfa/1045519.md)
+
+5-24 [美62位众议员连署 呼吁美国将台纳入疫苗分配名单](/articles/rfa/1045520.md)
+
 5-24 [北京等多省市网民涉“侮辱袁隆平”遭刑拘  民众不满袁被过度神化](/articles/rfa/1045521.md)
 
 5-22 [文在寅与拜登会晤   三星等大厂宣布在美投资](/articles/rfa/1045522.md)
@@ -596,8 +600,4 @@
 4-21 [台湾学者吁学何凤山放宽签证  拯救缅甸人](/articles/rfa/1045817.md)
 
 4-20 [欧盟印太战略并非联美抗中  文件未提台湾](/articles/rfa/1045818.md)
-
-4-20 [“五眼联盟”成员新西兰靠拢北京   澳学者批 “背信弃义”](/articles/rfa/1045819.md)
-
-4-20 [网络炫富视频恐激起民怨   官媒倡禁网上高档消费讯息](/articles/rfa/1045820.md)
 
