--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [天问一号成功登陆火星 美中进入新一轮太空竞赛](/articles/voa/1040595.md)
+
+5-24 [报道：情报揭示武汉病毒研究所研究人员患病细节](/articles/voa/1040596.md)
+
 5-24 [台湾疫情严峻 金门另设防疫规定 台北称违法](/articles/voa/1040597.md)
 
 5-24 [在中国审查严钱难赚，好莱坞开始正视骨感现实](/articles/voa/1040598.md)
@@ -596,8 +600,4 @@
 5-11 [拜登：导致美国燃油管道中断的勒索软件攻击是“犯罪行为”](/articles/voa/1040893.md)
 
 5-11 [伊朗快艇霍尔木兹海峡骚扰美舰 美海警巡逻舰开火示警](/articles/voa/1040894.md)
-
-5-11 [美国批准为12岁至15岁未成年人接种辉瑞新冠疫苗](/articles/voa/1040895.md)
-
-5-11 [中共官媒系列文章批美人权“双重标准” 美参议员抨击习近平散布“假象等值”宣传](/articles/voa/1040896.md)
 
