--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-24 [英国大学面临专业裁撤和裁员](/articles/ft/1045581.md)
+
 5-24 [中美公关人的一天](/articles/ft/1045582.md)
 
 5-24 [一周世界舆论聚焦：美俄关系缓和对中国意味着什么？](/articles/ft/1045583.md)
@@ -598,6 +600,4 @@
 3-22 [负利率之下，技术如何影响金融体系现代化](/articles/ft/1045879.md)
 
 3-22 [特斯拉的下一站：“云上贵州”2.0吗？](/articles/ft/1045880.md)
-
-3-20 [英国人的“野外运动”与野味传统](/articles/ft/1045881.md)
 
