--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-24 [【立此存照】袁隆平离世前家人高唱我的祖国 血压心率一度回升](/articles/cdt/382258.md)
+
 5-24 [小声比比｜把孩子当犯人管，这届家长真的让我害怕](/articles/cdt/382259.md)
 
 5-24 [新京报｜发布侮辱攻击袁隆平有害内容，64个微博账号被永久关闭](/articles/cdt/382265.md)
@@ -598,6 +600,4 @@
 4-18 [学人Scholar｜郑宗义：放任人文学科萎缩，社会将付出沉重代价](/articles/cdt/383549.md)
 
 4-18 [【图说天朝】自己父母自己养 不推政府不推党](/articles/cdt/383553.md)
-
-4-18 [老朱煮酒 | 流水账4月12-13日](/articles/cdt/383566.md)
 
