--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-24 [昂山素季出庭应讯 称民盟仍会继续存在](/articles/voa/1040594.md)
+
 5-24 [天问一号成功登陆火星 美中进入新一轮太空竞赛](/articles/voa/1040595.md)
 
 5-24 [报道：情报揭示武汉病毒研究所研究人员患病细节](/articles/voa/1040596.md)
@@ -598,6 +600,4 @@
 5-11 [接种疫苗后89岁纽约老翁渴望参加舞会](/articles/voa/1040892.md)
 
 5-11 [拜登：导致美国燃油管道中断的勒索软件攻击是“犯罪行为”](/articles/voa/1040893.md)
-
-5-11 [伊朗快艇霍尔木兹海峡骚扰美舰 美海警巡逻舰开火示警](/articles/voa/1040894.md)
 
