--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [台湾疫情大爆发 接下来一周最关键](/articles/voa/1040592.md)
+
+5-24 [华尔街日报披露美情报机构报告更多细节，武毒所再次成为病毒泄露怀疑目标](/articles/voa/1040593.md)
+
 5-24 [昂山素季出庭应讯 称民盟仍会继续存在](/articles/voa/1040594.md)
 
 5-24 [天问一号成功登陆火星 美中进入新一轮太空竞赛](/articles/voa/1040595.md)
@@ -596,8 +600,4 @@
 5-11 [驳“东升西降”说 美国杂志“纸龙”论触怒中国官媒](/articles/voa/1040890.md)
 
 5-11 [中国人口普查结果出炉 劳动人口青黄不接状况继续恶化](/articles/voa/1040891.md)
-
-5-11 [接种疫苗后89岁纽约老翁渴望参加舞会](/articles/voa/1040892.md)
-
-5-11 [拜登：导致美国燃油管道中断的勒索软件攻击是“犯罪行为”](/articles/voa/1040893.md)
 
