--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-24 [贵阳活石教会仰华牧师被殴伤  衡阳9信徒传福音被拘留](/articles/rfa/1045516.md)
+
 5-24 [甘肃马拉松21人死   是人祸还是天灾？](/articles/rfa/1045517.md)
 
 5-24 [美韩声明提台海 美国拉韩政治同盟 韩国获经贸利益](/articles/rfa/1045518.md)
@@ -598,6 +600,4 @@
 4-21 [中国核武扩张迅速   美战略司令：重大战略威胁](/articles/rfa/1045814.md)
 
 4-21 [爱沙尼亚文化界连署 呼吁对中国影响力扩张採取对策](/articles/rfa/1045815.md)
-
-4-21 [耿和旧金山中领馆外 要求“还我丈夫高智晟骨灰”](/articles/rfa/1045816.md)
 
