--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-25 [立陶宛退出中国中东欧17+1合作机制  呼吁他国跟进](/articles/rfa/1045513.md)
+
+5-25 [程慕阳变脸成功  成为加拿大社区有功人士](/articles/rfa/1045514.md)
+
+5-25 [中国西藏白皮书称人民幸福   藏人代表：谎话连篇](/articles/rfa/1045515.md)
+
 5-24 [贵阳活石教会仰华牧师被殴伤  衡阳9信徒传福音被拘留](/articles/rfa/1045516.md)
 
 5-24 [甘肃马拉松21人死   是人祸还是天灾？](/articles/rfa/1045517.md)
@@ -594,10 +600,4 @@
 4-21 [官媒民调:  九成中国年轻人“平视”、“俯视”西方](/articles/rfa/1045811.md)
 
 4-21 [被迫开统一必修课  英国在华国际学校计划撤出中国](/articles/rfa/1045812.md)
-
-4-21 [美众院通过决议案 谴责中国侵犯香港人权](/articles/rfa/1045813.md)
-
-4-21 [中国核武扩张迅速   美战略司令：重大战略威胁](/articles/rfa/1045814.md)
-
-4-21 [爱沙尼亚文化界连署 呼吁对中国影响力扩张採取对策](/articles/rfa/1045815.md)
 
