--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-25 [袁隆平究竟是何时看到饿殍的？中国新华网的说法自相矛盾](/articles/rfa/1045512.md)
+
 5-25 [立陶宛退出中国中东欧17+1合作机制  呼吁他国跟进](/articles/rfa/1045513.md)
 
 5-25 [程慕阳变脸成功  成为加拿大社区有功人士](/articles/rfa/1045514.md)
@@ -598,6 +600,4 @@
 4-21 [中国个人负债增速世界前列  银行卡债务超美](/articles/rfa/1045810.md)
 
 4-21 [官媒民调:  九成中国年轻人“平视”、“俯视”西方](/articles/rfa/1045811.md)
-
-4-21 [被迫开统一必修课  英国在华国际学校计划撤出中国](/articles/rfa/1045812.md)
 
