--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,7 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
-5-25 [阮耀钟 | 由妄议中央大政方针想到的](/articles/cdt/382248.md)
+5-25 [【404文库】阮耀钟 | 由妄议中央大政方针想到的](/articles/cdt/382248.md)
 
 5-25 [【旧闻重温】阮耀钟 | 请慎用“正能量” ──一个物理学家的担忧](/articles/cdt/382251.md)
 
