--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [时事大家谈: 饥饿记忆与恐惧，袁隆平离世触动中国?](/articles/voa/1040585.md)
+
 5-25 [大宗商品价格连创新高，北京急忙约谈行业大佬，稳定市场](/articles/voa/1040586.md)
 
 5-25 [国际社会谴责“劫机”事件 欧盟考虑避开白俄罗斯领空](/articles/voa/1040587.md)
@@ -598,6 +600,4 @@
 5-11 [陈玫、蔡伟“寻滋”案庭审结束，刑期稍晚宣判](/articles/voa/1040883.md)
 
 5-11 [台湾称将继续争取参加世卫大会 中国“妥善安排”悖离事实](/articles/voa/1040884.md)
-
-5-11 [香港政府首次购买奥运会电视转播权](/articles/voa/1040885.md)
 
