--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-25 [美审查病毒起源报告 北京：武汉研究所零感染](/articles/dw/1042298.md)
+
+5-25 [哈马斯炸弹威胁? 德总理斥白俄罗斯胡说](/articles/dw/1042299.md)
+
 5-25 [瑞典环保少女与中国官媒的口水战](/articles/dw/1042300.md)
 
 5-25 [弗洛伊德事件一周年：他的死改变了什么？](/articles/dw/1042301.md)
@@ -596,8 +600,4 @@
 5-7 [习近平：世界陷入乱局，中国应把握机遇](/articles/dw/1042596.md)
 
 5-7 [中国：“长征五号”碎片造成危害的概率极低](/articles/dw/1042597.md)
-
-5-7 [德语媒体：来自中国的贷款危险吗？](/articles/dw/1042598.md)
-
-5-7 [安理会讨论全球合作 中美俄外长同时“与会”](/articles/dw/1042599.md)
 
