--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-25 [布林肯前往中东 在以色列-哈马斯停火基础上推动加沙重建](/articles/voa/1040576.md)
+
+5-25 [台海升温中民主台湾面对中国威胁做出什么选择？](/articles/voa/1040577.md)
+
 5-25 [白俄罗斯拦截爱尔兰航班抓走反对派，引发国际众怒](/articles/voa/1040578.md)
 
 5-25 [美参议员计划对与中国竞争法案提修正案，禁止进口涉强迫劳动海鲜](/articles/voa/1040579.md)
@@ -596,8 +600,4 @@
 5-12 [拜登政府宣布批准在新英格兰地区海岸附近建立大型近海风力发电场](/articles/voa/1040874.md)
 
 5-12 [日本支持台湾以观察员身份参加世界卫生大会](/articles/voa/1040875.md)
-
-5-12 [时事大家谈: 美国支持豁免新冠疫苗专利保护，北京为何作壁上观？](/articles/voa/1040876.md)
-
-5-12 [美日法澳首次联合军演 应对中国咄咄逼人的行为](/articles/voa/1040877.md)
 
