--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-25 [21人遇难 甘肃超级马拉松赛招致批评](/articles/ft/1045580.md)
+
 5-24 [英国大学面临专业裁撤和裁员](/articles/ft/1045581.md)
 
 5-24 [中美公关人的一天](/articles/ft/1045582.md)
@@ -598,6 +600,4 @@
 3-22 [中美高层会谈中的一条“金句”及译文浅析](/articles/ft/1045878.md)
 
 3-22 [负利率之下，技术如何影响金融体系现代化](/articles/ft/1045879.md)
-
-3-22 [特斯拉的下一站：“云上贵州”2.0吗？](/articles/ft/1045880.md)
 
