--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-25 [通膨疑虑减轻 港股午盘涨逾1% – 法国国际广播电台 - RFI](/articles/rfi/1029265.md)
+
 5-25 [美股收红 激励港股开高 – 法国国际广播电台 - RFI](/articles/rfi/1029266.md)
 
 5-25 [拜登谴责白俄逼客机迫降逮人 挺欧盟制裁当局 – 法国国际广播电台 - RFI](/articles/rfi/1029267.md)
@@ -598,6 +600,4 @@
 5-20 [拜登要求内坦尼亚胡立即缓和加沙紧张局势](/articles/rfi/1029563.md)
 
 5-20 [比特币续跳水大跌30% – 法国国际广播电台 - RFI](/articles/rfi/1029564.md)
-
-5-20 [法国千万警员示威 保护民众的群体诉求安全与保护](/articles/rfi/1029565.md)
 
