--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-25 [品葱｜Tseyu：讨薪者再次成为“恐怖分子”，舆论环境却大不相同](/articles/cdt/382235.md)
+
 5-25 [中产生活观察 | 白银百公里越野悲剧和中国新中产命运](/articles/cdt/382239.md)
 
 5-25 [德国之音 | 瑞典环保少女与中国官媒的口水战](/articles/cdt/382243.md)
@@ -598,6 +600,4 @@
 4-19 [【网络民议】我们过不了富人生活连看下都不行吗？](/articles/cdt/383522.md)
 
 4-19 [Philosophia 哲学社｜维为伪学考：被歪曲的史学背后，隐藏着什么？](/articles/cdt/383527.md)
-
-4-19 [鉴闻｜货车司机生存困境：吃住在车上数月不回家，运费被扣轮胎被偷](/articles/cdt/383531.md)
 
