--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+5-25 [中石化将于鄂尔多斯推出首个绿氢炼化项目 年产1万吨规划2022年投产](/articles/reuters/1037681.md)
+
 5-25 [美联储正在加紧探索数字美元潜在发展的研究和努力--理事布雷纳德](/articles/reuters/1037682.md)
 
 5-25 [独家：特朗普在苏格兰购买高尔夫球场的资金来源面临法庭调查](/articles/reuters/1037683.md)
@@ -598,6 +600,4 @@
 5-18 [中国猪肉制品商牧原股份降低饲料中豆粕用量，或促使其他业者跟进](/articles/reuters/1037979.md)
 
 5-18 [压力之下 美国总统拜登在幕后努力促使巴以停火](/articles/reuters/1037980.md)
-
-5-18 [亚股上涨金价升至三个月高位 美元走软](/articles/reuters/1037981.md)
 
