--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-25 [电瓶车阜新市政府门口爆炸6死伤   民间认定并非普通意外](/articles/rfa/1045507.md)
+
 5-25 [王靖渝案最新进展 三大疑问盘点](/articles/rfa/1045508.md)
 
 5-25 [美国情报为“病毒实验室泄漏说”添砖加瓦](/articles/rfa/1045509.md)
@@ -598,6 +600,4 @@
 4-21 [台官员诠释两岸"建设性模糊" ：善意的谅解](/articles/rfa/1045805.md)
 
 4-21 [中国官媒围剿特斯拉   背后有政治目的？](/articles/rfa/1045806.md)
-
-4-21 [日本国会成立支援南蒙古议会联盟](/articles/rfa/1045807.md)
 
