--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-25 [先生制造｜还原白银越野事故现场：一场时间错乱的灾难](/articles/cdt/382232.md)
+
 5-25 [品葱｜Tseyu：讨薪者再次成为“恐怖分子”，舆论环境却大不相同](/articles/cdt/382235.md)
 
 5-25 [中产生活观察 | 白银百公里越野悲剧和中国新中产命运](/articles/cdt/382239.md)
@@ -598,6 +600,4 @@
 4-20 [【404文库】肖美丽自述：反二手烟被网暴炸号，攻击我的人是谁？](/articles/cdt/383511.md)
 
 4-19 [【网络民议】我们过不了富人生活连看下都不行吗？](/articles/cdt/383522.md)
-
-4-19 [Philosophia 哲学社｜维为伪学考：被歪曲的史学背后，隐藏着什么？](/articles/cdt/383527.md)
 
