--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-25 [新冠时期学习的极限](/articles/dw/1042295.md)
+
 5-25 [中国四招假讯息扰台 藉大选与疫情发动攻势](/articles/dw/1042296.md)
 
 5-25 [手机业务放一边 媒体爆华为发展转向](/articles/dw/1042297.md)
@@ -598,6 +600,4 @@
 5-8 [中澳经贸在敏感行业已经开始“断交”了吗？](/articles/dw/1042593.md)
 
 5-8 [一个不那么“新冠”的图集](/articles/dw/1042594.md)
-
-5-8 [德国网速为什么这么慢？](/articles/dw/1042595.md)
 
