--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-25 [中国喊要给台湾疫苗 台湾另有渠道6月取得200万剂](/articles/rfa/1045506.md)
+
 5-25 [电瓶车阜新市政府门口爆炸6死伤   民间认定并非普通意外](/articles/rfa/1045507.md)
 
 5-25 [王靖渝案最新进展 三大疑问盘点](/articles/rfa/1045508.md)
@@ -598,6 +600,4 @@
 4-22 [加拿大海底捞店内摄像镜头众多   员工和专家忧虑安全隐私外泄](/articles/rfa/1045804.md)
 
 4-21 [台官员诠释两岸"建设性模糊" ：善意的谅解](/articles/rfa/1045805.md)
-
-4-21 [中国官媒围剿特斯拉   背后有政治目的？](/articles/rfa/1045806.md)
 
