--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [抵制冬奥呼声不断 北京会否步莫斯科后尘？](/articles/voa/1040573.md)
+
 5-25 [萨摩亚陷入宪政危机 结果将影响大国竞争 美国敦促各方尊重民主程序](/articles/voa/1040574.md)
 
 5-25 [台海冲突时韩国应怎么做？ 五角大楼：由韩国人自己决定](/articles/voa/1040575.md)
@@ -598,6 +600,4 @@
 5-12 [新疆太阳能产业或成为下一个“新疆棉”：美中在气候变化领域是否还有合作的必要？](/articles/voa/1040871.md)
 
 5-12 [五角大楼表示正稳步撤离阿富汗但拒绝披露目前仍有多少美军留驻](/articles/voa/1040872.md)
-
-5-12 [白宫要义: 白宫谴责对以色列的攻击，强调以巴须获得公平对待](/articles/voa/1040873.md)
 
