--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [中国批维吾尔法庭抹黑新疆，世维会：为维族人提供公正审判](/articles/voa/1040571.md)
+
 5-25 [赛格大厦接连晃惊动广东官员 安民告示：“大楼结构整体性能满足要求”](/articles/voa/1040572.md)
 
 5-25 [抵制冬奥呼声不断 北京会否步莫斯科后尘？](/articles/voa/1040573.md)
@@ -598,6 +600,4 @@
 5-12 [中国要求抵制讨论维吾尔人权问题的联合国会议](/articles/voa/1040869.md)
 
 5-12 [报道：拜登挑选前芝加哥市长伊曼纽尔担任驻日大使](/articles/voa/1040870.md)
-
-5-12 [新疆太阳能产业或成为下一个“新疆棉”：美中在气候变化领域是否还有合作的必要？](/articles/voa/1040871.md)
 
