--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-26 [中共百年大庆强化对藏控制 藏人领袖呼吁警惕文化灭绝](/articles/voa/1040567.md)
+
+5-26 [台湾三级警戒延长，但千万剂疫苗可望抵台](/articles/voa/1040568.md)
+
+5-25 [布林肯抵达中东 称美国将支持重建加沙](/articles/voa/1040569.md)
+
 5-25 [美动作片“速度与激情9”主演因称台湾为国家而被迫道歉](/articles/voa/1040570.md)
 
 5-25 [中国批维吾尔法庭抹黑新疆，世维会：为维族人提供公正审判](/articles/voa/1040571.md)
@@ -594,10 +600,4 @@
 5-12 [七家苹果供应商被指使用新疆强迫劳动 苹果称未发现任何证据](/articles/voa/1040865.md)
 
 5-12 [预测新冠病毒爆发热点的工具问世](/articles/voa/1040866.md)
-
-5-12 [美资深参议员询问美国公司向华为出口硬盘驱动器事宜](/articles/voa/1040867.md)
-
-5-12 [共和党议员：拜登官员指改变台海战略模糊会造成不稳是在附和中共](/articles/voa/1040868.md)
-
-5-12 [中国要求抵制讨论维吾尔人权问题的联合国会议](/articles/voa/1040869.md)
 
