--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-26 [台湾4架F-16战斗机改涂装赴美秘训](/articles/rfa/1045502.md)
+
 5-25 [“维吾尔独立法庭”年底终极裁决  中国先发制人猛烈批评](/articles/rfa/1045503.md)
 
 5-25 [北京、浙江等地政府停车场谢绝特斯拉](/articles/rfa/1045504.md)
@@ -598,6 +600,4 @@
 4-22 [习近平将出席气候峰会 可能做出新承诺](/articles/rfa/1045800.md)
 
 4-22 [传美中互派大使人选已定  伯恩斯、秦刚何许人也？](/articles/rfa/1045801.md)
-
-4-22 [维权律师陈科云遇袭   疑受国保骚扰](/articles/rfa/1045802.md)
 
