--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-26 [俄罗斯针对反对派领袖纳瓦尔尼展开新的刑事调查](/articles/voa/1040564.md)
+
+5-26 [美卫生部长呼吁对新冠病毒源头进行新的“透明”调查，支持台湾参与WHA](/articles/voa/1040565.md)
+
+5-26 [美国试图打击偷渡移民的犯罪团伙](/articles/voa/1040566.md)
+
 5-26 [中共百年大庆强化对藏控制 藏人领袖呼吁警惕文化灭绝](/articles/voa/1040567.md)
 
 5-26 [台湾三级警戒延长，但千万剂疫苗可望抵台](/articles/voa/1040568.md)
@@ -594,10 +600,4 @@
 5-12 [国家建筑博物馆焕然一新重新开放](/articles/voa/1040862.md)
 
 5-12 [美联社调查：网上假粉丝大军提升中国全球信息传递能力](/articles/voa/1040863.md)
-
-5-12 [电视占北京在美宣传影响活动的开支大头](/articles/voa/1040864.md)
-
-5-12 [七家苹果供应商被指使用新疆强迫劳动 苹果称未发现任何证据](/articles/voa/1040865.md)
-
-5-12 [预测新冠病毒爆发热点的工具问世](/articles/voa/1040866.md)
 
