--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-26 [八角楼的灯光 | 反恐的枪口为什么屡屡指向农民工？](/articles/cdt/382198.md)
+
 5-25 [网信唐山｜“网络涉军举报和辟谣平台”上线开通 净化涉军网络环境](/articles/cdt/382201.md)
 
 5-25 [真实故事计划｜62个白血病儿家长，在燕郊送外卖](/articles/cdt/382203.md)
@@ -598,6 +600,4 @@
 4-20 [高倍镜｜海南一厅官因研究秦桧被处理，从厅级降为了处级](/articles/cdt/383469.md)
 
 4-20 [【CDT推荐】本周推荐媒体](/articles/cdt/383495.md)
-
-4-20 [【404文库】抛开书本 | 豆瓣删除所有关于第93届奥斯卡奖信息](/articles/cdt/383503.md)
 
