--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-26 [褚朝新说事 | 救了6个人的牧羊人那么纯朴，为什么要公然撒谎？](/articles/cdt/382196.md)
+
 5-26 [八角楼的灯光 | 反恐的枪口为什么屡屡指向农民工？](/articles/cdt/382198.md)
 
 5-25 [网信唐山｜“网络涉军举报和辟谣平台”上线开通 净化涉军网络环境](/articles/cdt/382201.md)
@@ -598,6 +600,4 @@
 4-20 [大象公会｜央行的人口转型论文有多烂](/articles/cdt/383467.md)
 
 4-20 [高倍镜｜海南一厅官因研究秦桧被处理，从厅级降为了处级](/articles/cdt/383469.md)
-
-4-20 [【CDT推荐】本周推荐媒体](/articles/cdt/383495.md)
 
