--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-26 [加拿大艾伯塔省要求大学审查与中共实体的合作](/articles/voa/1040559.md)
+
+5-26 [布林肯宣布对加沙地带提供新的灾难救助](/articles/voa/1040560.md)
+
 5-26 [白宫：美国周二达到疫苗接种里程碑](/articles/voa/1040561.md)
 
 5-26 [时事大家谈: 投资协定冻结 立陶宛“退群”，中欧关系断崖式下滑？](/articles/voa/1040562.md)
@@ -596,8 +600,4 @@
 5-12 [中国人口2026至2030年或迎拐点 负增长时代渐行渐近](/articles/voa/1040857.md)
 
 5-12 [中共“刀把子”暗讽印度 自诩威权管制的优越性](/articles/voa/1040858.md)
-
-5-12 [巴以冲突升级 双方已经有40人被打死 美国表态](/articles/voa/1040859.md)
-
-5-12 [被指针对亚裔女性 美国佐治亚州按摩店枪手嫌疑人面临死刑审判](/articles/voa/1040860.md)
 
