--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-26 [在中国，埃隆·马斯克要学着谦虚点儿了！ - 法国世界报](/articles/rfi/1029209.md)
+
+5-26 [解析美中竞争加剧下的法国印太防务战略 - 印太纵览](/articles/rfi/1029210.md)
+
 5-26 [称台湾为国家惹怒网民 美国大明星用中文道歉](/articles/rfi/1029211.md)
 
 5-26 [法国总统马克龙支持白俄罗斯反对派参加七国集团会议](/articles/rfi/1029212.md)
@@ -596,8 +600,4 @@
 5-20 [法国前总统沙柯吉竞选经费弊案 法院开庭审理 – 法国国际广播电台 - RFI](/articles/rfi/1029507.md)
 
 5-20 [蓝源公司太空船首飞座位竞标 出价达280万美元 – 法国国际广播电台 - RFI](/articles/rfi/1029508.md)
-
-5-20 [黛安娜遭设计受访？BBC将公布调查报告 – 法国国际广播电台 - RFI](/articles/rfi/1029509.md)
-
-5-20 [法媒呼吁加强病毒实验室监督设立“黑匣子” - 法国报纸摘要](/articles/rfi/1029510.md)
 
