--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-26 [世卫调查组成员：若再访中国有助于新冠溯源研究](/articles/voa/1040554.md)
+
+5-26 [白俄罗斯迫降航班抓人后 国际航班回避其领空](/articles/voa/1040555.md)
+
+5-26 [拜登政府宣布给予居美缅甸公民“临时保护身份”](/articles/voa/1040556.md)
+
 5-26 [拜登与普京同意6月16日在日内瓦举行峰会](/articles/voa/1040557.md)
 
 5-26 [布林肯抵耶路撒冷 推动以巴和平、加沙重建](/articles/voa/1040558.md)
@@ -594,10 +600,4 @@
 5-13 [美国国际宗教自由委员会：认定种族灭绝亦需防患于未然](/articles/voa/1040852.md)
 
 5-13 [香港立法会通过条例将宣誓效忠延伸到区议会](/articles/voa/1040853.md)
-
-5-13 [澳大利亚前议员华裔顾问挑战反外国干涉法 高院裁定联邦警察搜查合法](/articles/voa/1040854.md)
-
-5-12 [中国人权律师赴美被限制出境 只能留下来“建设祖国”](/articles/voa/1040855.md)
-
-5-12 [美国防部将小米公司从黑名单中拿掉，分析：拜登政府仍会继续上届政府的某些禁令](/articles/voa/1040856.md)
 
