--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,16 @@
 金融时报
 ------
 
+5-26 [巴菲特的伯克希尔是如何“管资本”的？](/articles/ft/1045573.md)
+
+5-26 [投资前，你有看过风险提示吗？](/articles/ft/1045574.md)
+
+5-26 [阅读教会我们直面“内卷”，细味生活](/articles/ft/1045575.md)
+
+5-26 [碳中和，石油美元的终结？](/articles/ft/1045576.md)
+
+5-26 [比特币：数字资产交易的银行头寸问题](/articles/ft/1045577.md)
+
 5-25 [快手股价大幅下跌](/articles/ft/1045578.md)
 
 5-25 [《孤星基础设施保护法案》释放的信号分析](/articles/ft/1045579.md)
@@ -590,14 +600,4 @@
 3-22 [一个商业公司的最大价值是什么？](/articles/ft/1045871.md)
 
 3-22 [英国智库呼吁将远程办公作为默认工作方式](/articles/ft/1045872.md)
-
-3-22 [中美阿拉斯加对话将如何影响中美关系走向？](/articles/ft/1045873.md)
-
-3-22 [黄峥的卸任与拼多多公司治理构架的演变](/articles/ft/1045874.md)
-
-3-22 [分化的经济走势、提前演化的市场预期与趋同的货币政策立场](/articles/ft/1045875.md)
-
-3-22 [一周世界舆论聚焦：中美会晤是展示给各自国内和国际社会看的](/articles/ft/1045876.md)
-
-3-22 [拜登刺激方案有望拉动全球经济](/articles/ft/1045877.md)
 
