--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-26 [一辈子不入党 袁隆平不寻常](/articles/rfi/1029206.md)
+
 5-26 [美国重量级专家转向 武汉病毒所再入瞄准镜](/articles/rfi/1029207.md)
 
 5-26 [法国有望安然度暑假 - 要闻分析](/articles/rfi/1029208.md)
@@ -598,6 +600,4 @@
 5-20 [曾染新冠病毒 英威廉王子今接种疫苗](/articles/rfi/1029504.md)
 
 5-20 [全球COVID-19累计1亿6480万人染疫 近342万人不治 – 法国国际广播电台 - RFI](/articles/rfi/1029505.md)
-
-5-20 [法国专家看文在寅访美：再凸显亚洲对美国战略的重要性 - 要闻解说](/articles/rfi/1029506.md)
 
