--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-26 [美国高中年刊给女生胸部“打码”引争议](/articles/nyt/1046821.md)
+
+5-26 [简报：《速激9》主演称台湾是国家后道歉；全美纪念弗洛伊德去世一周年](/articles/nyt/1046822.md)
+
 5-25 [美国的民主何以岌岌可危](/articles/nyt/1046823.md)
 
 5-25 [炸弹骗局、出动战机：白俄罗斯迫降客机引发外交对决](/articles/nyt/1046824.md)
@@ -596,8 +600,4 @@
 3-4 [美交通部监察长称赵小兰滥用职权，与中国交往密切](/articles/nyt/1047119.md)
 
 3-4 [美国务卿：处理美中关系是21世纪最大地缘政治考验](/articles/nyt/1047120.md)
-
-3-4 [“东升西降”：习近平的后疫情时代中国崛起蓝图](/articles/nyt/1047121.md)
-
-3-4 [简报：习近平的后疫情中国蓝图；美国人对华好感度创新低](/articles/nyt/1047122.md)
 
