--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-26 [称台湾为国家，《速度与激情9》主演道歉](/articles/nyt/1046820.md)
+
 5-26 [美国高中年刊给女生胸部“打码”引争议](/articles/nyt/1046821.md)
 
 5-26 [简报：《速激9》主演称台湾是国家后道歉；全美纪念弗洛伊德去世一周年](/articles/nyt/1046822.md)
@@ -598,6 +600,4 @@
 3-4 [想当纽约市长？馄饨和鸡翅都很重要](/articles/nyt/1047118.md)
 
 3-4 [美交通部监察长称赵小兰滥用职权，与中国交往密切](/articles/nyt/1047119.md)
-
-3-4 [美国务卿：处理美中关系是21世纪最大地缘政治考验](/articles/nyt/1047120.md)
 
