--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-26 [哥伦比亚特区对亚马逊提起诉讼](/articles/ft/1045571.md)
+
+5-26 [普京和拜登将于6月在日内瓦会晤](/articles/ft/1045572.md)
+
 5-26 [巴菲特的伯克希尔是如何“管资本”的？](/articles/ft/1045573.md)
 
 5-26 [投资前，你有看过风险提示吗？](/articles/ft/1045574.md)
@@ -596,8 +600,4 @@
 3-23 [A股的错愕与惊愕](/articles/ft/1045869.md)
 
 3-23 [阿提哈德航空CEO：不要抵抗风暴](/articles/ft/1045870.md)
-
-3-22 [一个商业公司的最大价值是什么？](/articles/ft/1045871.md)
-
-3-22 [英国智库呼吁将远程办公作为默认工作方式](/articles/ft/1045872.md)
 
