--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-26 [五角大楼称仍在寻找与中国军方高层对话的适当方式](/articles/voa/1040548.md)
+
 5-26 [歧视仇恨剧增 亚太裔传统月专注增进了解](/articles/voa/1040549.md)
 
 5-26 [美国华裔女性拉比第一人细说从头](/articles/voa/1040550.md)
@@ -598,6 +600,4 @@
 5-13 [国际记者联盟呼吁港府支持新闻自由](/articles/voa/1040846.md)
 
 5-13 [美众议员要求苹果提供与涉新疆强迫劳动的中国供应商的关系等信息](/articles/voa/1040847.md)
-
-5-13 [美国务卿宣布制裁一名被指定严重侵犯人权的四川省中共官员(声明全文翻译)](/articles/voa/1040848.md)
 
