--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-26 [分析：数据遭疫情扭曲 薪资增长未跟上景气复苏步伐](/articles/reuters/1037631.md)
+
+5-26 [美国暗示不急于向台湾发送新冠疫苗](/articles/reuters/1037632.md)
+
+5-26 [独家：WhatsApp状告印度政府 称媒体新规意谓隐私不保--消息](/articles/reuters/1037633.md)
+
 5-26 [中国居民债务的上升趋势与美国次贷危机爆发前相似 尤其值得警惕--专家](/articles/reuters/1037634.md)
 
 5-26 [日本自民党资深官员山本幸三称日本今年夏季可能如期举办奥运会](/articles/reuters/1037635.md)
@@ -594,10 +600,4 @@
 5-19 [萨尔瓦多总统对中国提供不附带条件的援助以及疫苗表示赞赏](/articles/reuters/1037929.md)
 
 5-19 [“山寨币”热潮侵蚀比特币领地 投资者更看重乐趣和获利机会](/articles/reuters/1037930.md)
-
-5-19 [中国东部战区：坚决反对美驱逐舰穿航台湾海峡 “随时应对一切威胁挑衅”](/articles/reuters/1037931.md)
-
-5-19 [中国大陆周二新增14例确诊本土归零 疾控专家预计疫苗日接种量可破2,000万](/articles/reuters/1037932.md)
-
-5-19 [独家：G20支持新冠疫苗专利自愿授权 淡化全额资助WHO的承诺--草案](/articles/reuters/1037933.md)
 
