--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-26 [维舟｜白银马拉松：天灾还是人祸？](/articles/cdt/382170.md)
+
 5-26 [【CDTV】牧羊人朱克铭接受央视采访改口：这种天气是经常出现的](/articles/cdt/382172.md)
 
 5-26 [【网络民议】雄安新区开抓“婚俗改革” 网友：是没别的事可发展了吗？](/articles/cdt/382183.md)
@@ -598,6 +600,4 @@
 4-20 [中国网｜非法复制、存储涉密文件 新疆生产建设兵团这名干部被“双开”](/articles/cdt/383460.md)
 
 4-20 [Vista成长实验室｜北京第一代“鸡娃”给大家讲讲内卷教育的切肤之痛](/articles/cdt/383462.md)
-
-4-20 [王昊轩的韭菜园｜别怪知识分子不发声](/articles/cdt/383464.md)
 
