--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-26 [“拒绝生活在恐惧中”：一名令白俄罗斯迫降客机的异见人士](/articles/nyt/1046817.md)
+
 5-26 [“所有的努力和等待都白费了”：台湾疫情重创文化生活](/articles/nyt/1046818.md)
 
 5-26 [什么导致了甘肃越野跑比赛悲剧？](/articles/nyt/1046819.md)
@@ -598,6 +600,4 @@
 3-5 [中国将改革香港选举制度，摧毁反对派政治希望](/articles/nyt/1047115.md)
 
 3-5 [简报：“两会”涉港议题引关注；缅甸抗议中的女性力量](/articles/nyt/1047116.md)
-
-3-4 [关于纽约州长科莫性骚扰丑闻，我们知道些什么](/articles/nyt/1047117.md)
 
