--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-26 [五角大楼担忧阿联酋与中国加深军事关系 但暂不取消F-35军售计划](/articles/voa/1040546.md)
+
 5-26 [美国众议院民主党领导人提出法案全面反制中国挑战](/articles/voa/1040547.md)
 
 5-26 [五角大楼称仍在寻找与中国军方高层对话的适当方式](/articles/voa/1040548.md)
@@ -598,6 +600,4 @@
 5-13 [白宫要义: 美公布2020宗教自由报告，制裁中共官员](/articles/voa/1040844.md)
 
 5-13 [与中国官员交手前夕 戴琪：美国将采取措施促中国遵守公平贸易规则](/articles/voa/1040845.md)
-
-5-13 [国际记者联盟呼吁港府支持新闻自由](/articles/voa/1040846.md)
 
