--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-26 [莫狄骁的山房｜说躺平是不奋斗，约等于说吃苦是要受虐](/articles/cdt/382167.md)
+
 5-26 [维舟｜白银马拉松：天灾还是人祸？](/articles/cdt/382170.md)
 
 5-26 [【CDTV】牧羊人朱克铭接受央视采访改口：这种天气是经常出现的](/articles/cdt/382172.md)
@@ -598,6 +600,4 @@
 4-20 [【新闻连连看】“中国有没有骑手工会？周总理：将出现在我国台湾省”](/articles/cdt/383458.md)
 
 4-20 [中国网｜非法复制、存储涉密文件 新疆生产建设兵团这名干部被“双开”](/articles/cdt/383460.md)
-
-4-20 [Vista成长实验室｜北京第一代“鸡娃”给大家讲讲内卷教育的切肤之痛](/articles/cdt/383462.md)
 
