--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-26 [上市案受投资人追捧 京东物流营运前景却难乐观](/articles/voa/1040545.md)
+
 5-26 [五角大楼担忧阿联酋与中国加深军事关系 但暂不取消F-35军售计划](/articles/voa/1040546.md)
 
 5-26 [美国众议院民主党领导人提出法案全面反制中国挑战](/articles/voa/1040547.md)
@@ -598,6 +600,4 @@
 5-13 [以色列空袭打死几名哈马斯最高军事指挥官](/articles/voa/1040843.md)
 
 5-13 [白宫要义: 美公布2020宗教自由报告，制裁中共官员](/articles/voa/1040844.md)
-
-5-13 [与中国官员交手前夕 戴琪：美国将采取措施促中国遵守公平贸易规则](/articles/voa/1040845.md)
 
