--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-26 [舆论围剿下被迫就范？ 特斯拉在中国设立数据中心](/articles/rfa/1045492.md)
+
 5-26 [越南疫情蔓延工业园停产  首都河内等北部地区局部封锁](/articles/rfa/1045493.md)
 
 5-26 [网传《中国好声音》等综艺节目的海选被叫停](/articles/rfa/1045494.md)
@@ -598,6 +600,4 @@
 4-22 [加拿大允许引渡聆讯延期   孟晚舟将因此全身而退？](/articles/rfa/1045790.md)
 
 4-22 [成都秋雨圣约教会再遭冲击  多名教徒未成年子女被拘留](/articles/rfa/1045791.md)
-
-4-22 [美参院外委会通过《战略竞争法案》  台湾是印太战略重要支点](/articles/rfa/1045792.md)
 
