--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-26 [欧盟将对Facebook正式展开反垄断调查](/articles/ft/1045570.md)
+
 5-26 [哥伦比亚特区对亚马逊提起诉讼](/articles/ft/1045571.md)
 
 5-26 [普京和拜登将于6月在日内瓦会晤](/articles/ft/1045572.md)
@@ -598,6 +600,4 @@
 3-23 [拜登政府酝酿3万亿美元新支出计划](/articles/ft/1045868.md)
 
 3-23 [A股的错愕与惊愕](/articles/ft/1045869.md)
-
-3-23 [阿提哈德航空CEO：不要抵抗风暴](/articles/ft/1045870.md)
 
