--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-27 [华裔团体告特朗普“中国病毒”说，美华人圈反应不一](/articles/voa/1040540.md)
+
+5-27 [澳籍华裔作家杨恒均的信件庭审前夕公开 称健康恶化但没有恐惧](/articles/voa/1040541.md)
+
+5-26 [新冠源头调查再引争议 中国媒体辱骂白宫专家弗契是“小人”](/articles/voa/1040542.md)
+
 5-26 [面对疫苗短缺和向中国购买疫苗压力 蔡英文批中国妨碍台湾向原厂洽购疫苗](/articles/voa/1040543.md)
 
 5-26 [多位甘肃山地马拉松遇难者家属拒签赔偿协议](/articles/voa/1040544.md)
@@ -594,10 +600,4 @@
 5-13 [黑客袭击美管道公司导致民众抢购汽油 输油管线已开始重启](/articles/voa/1040838.md)
 
 5-13 [国际记者联盟报告：中国趁新冠疫情试图操控全球舆论给自己贴金](/articles/voa/1040839.md)
-
-5-13 [美国消费价格4月上涨](/articles/voa/1040840.md)
-
-5-13 [英前大学事务大臣：有关中国的自我审查是“对言论自由的真正威胁”](/articles/voa/1040841.md)
-
-5-13 [“继续发声直到中国停止迫害” 美英德驻联合国代表谴责新疆的人权侵犯](/articles/voa/1040842.md)
 
