--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-27 [【麻辣总局】赵秀富原创歌曲：我为祖国生二胎](/articles/cdt/382163.md)
+
 5-26 [莫狄骁的山房｜说躺平是不奋斗，约等于说吃苦是要受虐](/articles/cdt/382167.md)
 
 5-26 [维舟｜白银马拉松：天灾还是人祸？](/articles/cdt/382170.md)
@@ -598,6 +600,4 @@
 4-21 [TP工厂｜网暴中心的女权者（续）：巨大的恐惧中，“记得我们真实的生活”](/articles/cdt/383453.md)
 
 4-20 [【新闻连连看】“中国有没有骑手工会？周总理：将出现在我国台湾省”](/articles/cdt/383458.md)
-
-4-20 [中国网｜非法复制、存储涉密文件 新疆生产建设兵团这名干部被“双开”](/articles/cdt/383460.md)
 
