--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-27 [华盛顿邮报刊文：新冠病毒从武汉实验室外泄为什么可信？](/articles/rfi/1029145.md)
+
+5-27 [拜登对新冠病毒溯源的调门从低升高 - 要闻分析](/articles/rfi/1029146.md)
+
+5-27 [法国世界报：新冠病毒是怎么来的 ？ 拜登给90天时间要答案 - 法国世界报](/articles/rfi/1029147.md)
+
 5-27 [美国真的想要起诉前总统特朗普？](/articles/rfi/1029148.md)
 
 5-27 [法国历史文物宝库卢浮宫有了新馆长 此前的奥赛女馆长 - 文化遗产](/articles/rfi/1029149.md)
@@ -594,10 +600,4 @@
 5-21 [【视频】加沙：冲突持续11天后 巴以在埃及斡旋下停火](/articles/rfi/1029443.md)
 
 5-21 [加沙开始停火 拜登感谢埃及](/articles/rfi/1029444.md)
-
-5-21 [COVID-19全球疫情逾1亿6509万确诊 343万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1029445.md)
-
-5-21 [台湾疫情扩散双北宛如空城 - 台北一周](/articles/rfi/1029446.md)
-
-5-21 [港股收盘几乎平盘 – 法国国际广播电台 - RFI](/articles/rfi/1029447.md)
 
