--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [首位公开同性恋黑人女性主持白宫记者会](/articles/voa/1040534.md)
+
 5-27 [时事大家谈: 中国四面树敌，”东升西降“让北京膨胀？](/articles/voa/1040535.md)
 
 5-27 [拜登总统要求美情报界收集分析新冠病毒起源信息的声明(全文翻译）](/articles/voa/1040536.md)
@@ -598,6 +600,4 @@
 5-13 [美国接连遭网络入侵重创 拜登亡羊补牢颁布网络安全行政令](/articles/voa/1040832.md)
 
 5-13 [美参院委员会通过《无尽边疆法》 投资技术研发、防堵中国渗透](/articles/voa/1040833.md)
-
-5-13 [弥合穆斯林和犹太人鸿沟的虚拟开斋餐](/articles/voa/1040834.md)
 
