--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,32 @@
 路透
 ------
 
+5-27 [中国电商拼多多首季营收同比增逾2倍净亏损大幅缩减 因消费持续复苏](/articles/reuters/1037605.md)
+
+5-27 [美国再爆大规模枪击事件 加州公交工人枪杀八名同事](/articles/reuters/1037606.md)
+
+5-27 [焦点：人民币劲升出口商忙避险 “汇率风险中性”宣导恰逢其时](/articles/reuters/1037607.md)
+
+5-27 [焦点：时隔三年人民币升破6.4关口 但别期待会单边升值](/articles/reuters/1037608.md)
+
+5-27 [京东物流香港IPO散户认购超额714倍一手中签率8% 5,000多亿港元资金回笼](/articles/reuters/1037609.md)
+
+5-27 [小米首季手机出货量大增 带动经调整净利与总收入同创单季新高](/articles/reuters/1037610.md)
+
+5-27 [字节跳动本周启动一项针对在职和前任员工的股票回购计划--消息人士](/articles/reuters/1037611.md)
+
+5-27 [路透测算的人民币中间价料开在6.4036元附近 较上日升63点](/articles/reuters/1037612.md)
+
+5-27 [西班牙首相桑切斯与习近平通话 讨论中国共同投资欧盟复苏基金资助项目的机会](/articles/reuters/1037613.md)
+
+5-27 [美元本周首次上涨 日圆因经济前景恶化创两周来最大跌幅](/articles/reuters/1037614.md)
+
+5-27 [美股小幅收高 美联储官员平息通胀忧虑令美债收益率受限](/articles/reuters/1037615.md)
+
+5-27 [油价收高 美国原油库存下降提振需求前景](/articles/reuters/1037616.md)
+
+5-27 [金价跌破1,900美元大关 受累于美元和美债收益率回升](/articles/reuters/1037617.md)
+
 5-26 [小米首季手机出货量大增 带动经调整净利与总收入同创单季新高（更新版）](/articles/reuters/1037618.md)
 
 5-26 [中国商务部长：希望法国发挥积极作用 推动中欧投资协定尽早签署生效](/articles/reuters/1037619.md)
@@ -574,30 +600,4 @@
 5-19 [澳总理称贸易热络表明中澳关系并未崩坏 中国外交部：“揣着明白装糊涂”](/articles/reuters/1037903.md)
 
 5-19 [德国工商联会调高德国今年经济成长率预估至3% 低于政府看法](/articles/reuters/1037904.md)
-
-5-19 [中国央行专家：人民币国际化条件下 最终要放弃汇率目标推进货币政策框架转型](/articles/reuters/1037905.md)
-
-5-19 [尾盘跌幅扩大人民币收低近140点 受油盘购汇和欧元转跌带动](/articles/reuters/1037906.md)
-
-5-19 [欧洲议会将投票表决是否冻结中欧协定 中国外交部：尽早批准符合双方利益](/articles/reuters/1037907.md)
-
-5-19 [美众议院议长呼吁抵制北京冬奥会 中国外交部：“是典型的美式闹剧”不会得逞](/articles/reuters/1037908.md)
-
-5-19 [欧洲央行将房地产泡沫及公司债务列为欧元区最大风险](/articles/reuters/1037909.md)
-
-5-19 [俄罗斯副外长称美国豁免北溪二号制裁有助于两国关系正常化--IFAX](/articles/reuters/1037910.md)
-
-5-19 [俄罗斯下议院支持退出开放天空条约--国际文传电讯社](/articles/reuters/1037911.md)
-
-5-19 [《分析》升息阴影下债券投资者的不寻常避风港：垃圾债](/articles/reuters/1037912.md)
-
-5-19 [中国股市受地产及能源股拖累收低 政府禁令打击数字货币类股](/articles/reuters/1037913.md)
-
-5-19 [调查：有杂音但中国5月LPR不变预期仍是绝对主流，稳势有望延续](/articles/reuters/1037914.md)
-
-5-19 [优衣库出口衬衫遭美国海关拦下 因怀疑其可能使用新疆棉](/articles/reuters/1037915.md)
-
-5-19 [比特币跌破40,000美元关卡 以太币重挫15%](/articles/reuters/1037916.md)
-
-5-19 [韩国总统文在寅动身访美 脱北者敦促美国就人权问题向朝鲜施压](/articles/reuters/1037917.md)
 
