--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+5-27 [武毒所再成新冠病毒溯源焦点 鲁比奥：不应排除任何可能性](/articles/voa/1040525.md)
+
+5-27 [台湾外交官：中国主导游戏规则使世卫组织成为其“守门者”](/articles/voa/1040526.md)
+
+5-27 [关于对特朗普的刑事调查有七点要知道的事](/articles/voa/1040527.md)
+
+5-27 [针对亚裔的仇恨事件在新冠疫情前就已有之](/articles/voa/1040528.md)
+
+5-27 [忧中国效仿白俄逼降客机 流亡港人与丹麦政界呼吁严惩以儆效尤](/articles/voa/1040529.md)
+
+5-27 [中国在巴以间放弃左右逢源，开始猛怼以色列](/articles/voa/1040530.md)
+
 5-27 [美墨边界移民共享的美国梦](/articles/voa/1040531.md)
 
 5-27 [美参院通过修正案，禁止为武毒所及中国“增加功能”研究提供资助](/articles/voa/1040532.md)
@@ -588,16 +600,4 @@
 5-14 [伊玛目被抓 清真寺被毁，中共对信仰的打压无处不在](/articles/voa/1040823.md)
 
 5-13 [美日台议员将举行三边“战略对话” 提升台湾“入世”的势头](/articles/voa/1040824.md)
-
-5-13 [两名登山者葬身珠穆朗玛峰](/articles/voa/1040825.md)
-
-5-13 [维吾尔孩子不见了？报告称中国采取强制性政策降低维族出生率](/articles/voa/1040826.md)
-
-5-13 [通货膨胀忧虑挫伤全球股市](/articles/voa/1040827.md)
-
-5-13 [关税推动美国进口中国产品下降](/articles/voa/1040828.md)
-
-5-13 [专访美中军事战略问题专家梅慧琳：谈美中军事博弈](/articles/voa/1040829.md)
-
-5-13 [新加坡本地日增新冠病例大增 为下个月主办香格里拉对话会蒙上阴影](/articles/voa/1040830.md)
 
