--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-27 [动物接触还是实验室泄露? 拜登下令限期提新报告](/articles/dw/1042259.md)
+
+5-27 [因应中国竞争 美参院连推法案](/articles/dw/1042260.md)
+
 5-26 [事实核查:白俄罗斯迫降客机是否史无前例?](/articles/dw/1042261.md)
 
 5-26 [新疆人权：德国国际法专家质疑种族灭绝](/articles/dw/1042262.md)
@@ -596,8 +600,4 @@
 5-10 [德语媒体：默克尔的中国幻觉](/articles/dw/1042557.md)
 
 5-10 [中国运载火箭残骸坠入印度洋](/articles/dw/1042558.md)
-
-5-10 [以巴警民冲突 耶路撒冷局势紧张](/articles/dw/1042559.md)
-
-5-10 [拒签“一中承诺书” 驻港办台籍人员恐难获延签](/articles/dw/1042560.md)
 
