--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+5-27 [拜登命令情报机构调查新冠起源，90天内提交报告](/articles/nyt/1046814.md)
+
+5-27 [简报：拜登命令情报机构重查新冠起源；一个家庭的悲剧与“中国梦”的破灭](/articles/nyt/1046815.md)
+
+5-27 [别再妖魔化更年期](/articles/nyt/1046816.md)
+
 5-26 [“拒绝生活在恐惧中”：一名令白俄罗斯迫降客机的异见人士](/articles/nyt/1046817.md)
 
 5-26 [“所有的努力和等待都白费了”：台湾疫情重创文化生活](/articles/nyt/1046818.md)
@@ -594,10 +600,4 @@
 3-5 [部分科学家联署，质疑WHO武汉溯源调查](/articles/nyt/1047112.md)
 
 3-5 [无所畏惧的一代：站在抗议第一线的缅甸年轻女性](/articles/nyt/1047113.md)
-
-3-5 [中国将2021年经济增长目标设定为6%以上](/articles/nyt/1047114.md)
-
-3-5 [中国将改革香港选举制度，摧毁反对派政治希望](/articles/nyt/1047115.md)
-
-3-5 [简报：“两会”涉港议题引关注；缅甸抗议中的女性力量](/articles/nyt/1047116.md)
 
