--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-27 [冰点周刊｜在大厂实习](/articles/cdt/382150.md)
+
 5-27 [秦兽 | 有人躺赢就有人躺平](/articles/cdt/382152.md)
 
 5-27 [【麻辣总局】赵秀富原创歌曲：我为祖国生二胎](/articles/cdt/382163.md)
@@ -598,6 +600,4 @@
 4-21 [【网络民议】新垣结衣代言H&M  “爱国网民”：政治面前无老婆](/articles/cdt/383436.md)
 
 4-21 [WHU性别性向平等研究会 | 关于性平会工作停止的说明](/articles/cdt/383440.md)
-
-4-21 [TP工厂｜网暴中心的女权者（续）：巨大的恐惧中，“记得我们真实的生活”](/articles/cdt/383453.md)
 
