--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-27 [盘点2021年美国大规模枪击案](/articles/nyt/1046813.md)
+
 5-27 [拜登命令情报机构调查新冠起源，90天内提交报告](/articles/nyt/1046814.md)
 
 5-27 [简报：拜登命令情报机构重查新冠起源；一个家庭的悲剧与“中国梦”的破灭](/articles/nyt/1046815.md)
@@ -598,6 +600,4 @@
 3-5 [哈里王子夫妇与英国王室的一场“公关战”](/articles/nyt/1047111.md)
 
 3-5 [部分科学家联署，质疑WHO武汉溯源调查](/articles/nyt/1047112.md)
-
-3-5 [无所畏惧的一代：站在抗议第一线的缅甸年轻女性](/articles/nyt/1047113.md)
 
