--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-27 [拜登政府与欧盟为协调对华政策举行首次高层对话](/articles/voa/1040523.md)
+
+5-27 [美贸易代表戴琪和中国副总理刘鹤首次通话，同意继续保持沟通](/articles/voa/1040524.md)
+
 5-27 [武毒所再成新冠病毒溯源焦点 鲁比奥：不应排除任何可能性](/articles/voa/1040525.md)
 
 5-27 [台湾外交官：中国主导游戏规则使世卫组织成为其“守门者”](/articles/voa/1040526.md)
@@ -596,8 +600,4 @@
 5-14 [纽时：更多美国驻外人员患上神秘疾病](/articles/voa/1040821.md)
 
 5-14 [中国抗议者的挫败感：世界最严密的监控系统不能提供真相](/articles/voa/1040822.md)
-
-5-14 [伊玛目被抓 清真寺被毁，中共对信仰的打压无处不在](/articles/voa/1040823.md)
-
-5-13 [美日台议员将举行三边“战略对话” 提升台湾“入世”的势头](/articles/voa/1040824.md)
 
