--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-27 [马克龙到访卢旺达 庄严说来承认历史责任](/articles/rfi/1029101.md)
+
+5-27 [前特首梁振英传表明再参选意愿 北京未表态](/articles/rfi/1029102.md)
+
+5-27 [已接种疫苗仍染疫 澳门首宗变种病患走匀六地 经台湾回澳](/articles/rfi/1029103.md)
+
 5-27 [壹传媒称资金可营运18个月 今起复牌 股价半日急升近倍](/articles/rfi/1029104.md)
 
 5-27 [广东疫情扩大 发疫小区入境澳门须隔离14日 香港未停「回港易」](/articles/rfi/1029105.md)
@@ -594,10 +600,4 @@
 5-22 [袁隆平辞世 “毕生追求让所有人远离饥饿”](/articles/rfi/1029399.md)
 
 5-22 [华裔澳籍学者被控间谍罪 下周中国出庭受审 – 法国国际广播电台 - RFI](/articles/rfi/1029400.md)
-
-5-22 [台帛旅游泡泡因疫情喊卡 帛琉总统：可行便重启 – 法国国际广播电台 - RFI](/articles/rfi/1029401.md)
-
-5-22 [国际奥委会副主席称在紧急事态之下也将按时举办奥运会](/articles/rfi/1029402.md)
-
-5-22 [断交流：港控台支持暴力示威者台反批蔑视民主法治反映港府心虚](/articles/rfi/1029403.md)
 
