--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-27 [移民何苦“为难”移民](/articles/nyt/1046810.md)
+
 5-27 [香港的新型罪犯：亲民主活动人士](/articles/nyt/1046811.md)
 
 5-27 [军事政变后，缅甸被监禁、被杀害的诗人们](/articles/nyt/1046812.md)
@@ -598,6 +600,4 @@
 3-8 [赵婷被指“辱华”，《无依之地》在中国遭抵制审查](/articles/nyt/1047108.md)
 
 3-8 [简报：《无依之地》在中国遭抵制；微软称遭中国黑客攻击](/articles/nyt/1047109.md)
-
-3-6 [有关“两会”与中国发展路线图，你需要了解的四个要点](/articles/nyt/1047110.md)
 
