--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-27 [台湾单日死亡13创新高 重症逾500 台大医院求救](/articles/rfa/1045481.md)
+
+5-27 [杨恒均涉间谍案择日宣判 澳驻华大使被拒绝旁听](/articles/rfa/1045482.md)
+
 5-27 [刘鹤与戴琪首次通话   仅认同贸易重要性未处理分歧](/articles/rfa/1045483.md)
 
 5-27 [坎贝尔：美中关系“接触”时代已经结束](/articles/rfa/1045484.md)
@@ -596,8 +600,4 @@
 4-23 [特斯拉连日遭官媒网民围剿  环球时报出面为纠纷降温](/articles/rfa/1045779.md)
 
 4-23 [台湾国会维吾尔连线成立 吾尔开希吁让维族领袖入境](/articles/rfa/1045780.md)
-
-4-23 [中国提出 “东升西降”世界观    强调决不走西方宪政路](/articles/rfa/1045781.md)
-
-4-23 [凯迪关闭猫眼 猛批公知 “中国进入反智义和团时代”](/articles/rfa/1045782.md)
 
