--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-27 [【立此存照】全国至少已有12人因“侮辱袁隆平”被警方处罚](/articles/cdt/382135.md)
+
 5-27 [【CDTV】波特王｜五月粉红月报（上集）：台湾拉紧报，粉红放鞭炮？](/articles/cdt/382144.md)
 
 5-27 [红星评论｜男性应聘者4分进面试，教师性别比例失调岂能矫枉过正](/articles/cdt/382145.md)
@@ -598,6 +600,4 @@
 4-21 [【CDTV】王岐山｜ “我只是临时主持人，我为习近平报幕”](/articles/cdt/383418.md)
 
 4-21 [德国之声｜2021全球新闻自由指数 中国倒数第四](/articles/cdt/383419.md)
-
-4-21 [每日人物｜特斯拉变成了“特撕拉”](/articles/cdt/383420.md)
 
