--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-27 [澳大利亚维州再次宣布封城，欧洲制药商展开后期疫苗临床试验](/articles/voa/1040517.md)
+
+5-27 [维园光海难再现 香港再次禁止“六四”烛光守夜晚会](/articles/voa/1040518.md)
+
 5-27 [北京闭门审理杨恒均间谍案 阻止澳大利亚大使旁听](/articles/voa/1040519.md)
 
 5-27 [受困间谍指控 特斯拉欲建中国数据中心](/articles/voa/1040520.md)
@@ -596,8 +600,4 @@
 5-14 [“不要惊慌”：拜登呼吁美国人莫去加油站抢购汽油](/articles/voa/1040815.md)
 
 5-14 [“宁死不回中共统治的香港”: 流亡美国的反送中示威者](/articles/voa/1040816.md)
-
-5-14 [台湾邦交国洪都拉斯拟在中国设办事处购买疫苗 美国谴责出于政治而利用疫苗](/articles/voa/1040817.md)
-
-5-14 [香港立法会通过宣誓修例纳入区议员 学者指议会人大化无法反映民意](/articles/voa/1040818.md)
 
