--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-27 [广、深两地新增本地感染   疫苗接种站人山人海](/articles/rfa/1045479.md)
+
 5-27 [台湾抗疫 中共一手施惠疫苗 另一手仍派共机扰台](/articles/rfa/1045480.md)
 
 5-27 [台湾单日死亡13创新高 重症逾500 台大医院求救](/articles/rfa/1045481.md)
@@ -598,6 +600,4 @@
 4-23 [中美洲银行将在台湾设办事处    开创两个第一](/articles/rfa/1045777.md)
 
 4-23 [恶俗维基案二审开庭  牛腾宇恐囚十四年](/articles/rfa/1045778.md)
-
-4-23 [特斯拉连日遭官媒网民围剿  环球时报出面为纠纷降温](/articles/rfa/1045779.md)
 
