--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-28 [美国国务卿就香港立法会通过“爱国者治港” 选举新法发表声明](/articles/voa/1040514.md)
+
+5-27 [因言获罪的00后青年被迪拜释放 搭乘飞机前往土耳其](/articles/voa/1040515.md)
+
+5-27 [台湾披露500万剂BNT疫苗合约破局经过，暗批中国阻挠](/articles/voa/1040516.md)
+
 5-27 [澳大利亚维州再次宣布封城，欧洲制药商展开后期疫苗临床试验](/articles/voa/1040517.md)
 
 5-27 [维园光海难再现 香港再次禁止“六四”烛光守夜晚会](/articles/voa/1040518.md)
@@ -594,10 +600,4 @@
 5-14 [美国继续支持以色列 但裂痕开始出现](/articles/voa/1040812.md)
 
 5-14 [匈牙利计划建立第一所中国在欧洲的大学，引发安全和宣传恐惧](/articles/voa/1040813.md)
-
-5-14 [白宫要义: 戴琪: 强迫劳动是“粗野补贴”，将与布林肯讨论是否抵制冬奥会](/articles/voa/1040814.md)
-
-5-14 [“不要惊慌”：拜登呼吁美国人莫去加油站抢购汽油](/articles/voa/1040815.md)
-
-5-14 [“宁死不回中共统治的香港”: 流亡美国的反送中示威者](/articles/voa/1040816.md)
 
