--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-28 [美国防预算增加针对中国的威慑开支](/articles/voa/1040508.md)
+
+5-28 [美国将把有关新冠病毒起源的情报公布于众](/articles/voa/1040509.md)
+
+5-28 [时事大家谈: 台湾疫情再起，抗疫成美中台博弈新舞台？](/articles/voa/1040510.md)
+
 5-28 [香港立法会三读通过修改选举制度 民主党批倒退未决定参选否](/articles/voa/1040511.md)
 
 5-28 [香港当局威胁银行不得受理黎智英的银行业务，否则刑法伺候](/articles/voa/1040512.md)
@@ -594,10 +600,4 @@
 5-14 [拜登政府拟为国际创业者开大门 料将吸引大批中国人申请](/articles/voa/1040806.md)
 
 5-14 [美奥委会负责人致函国会：不要让运动员抵制北京冬奥会](/articles/voa/1040807.md)
-
-5-14 [拜登对台政策撼动“一中”鲁莽危险？美专家：对抗中国威胁必须自我防卫](/articles/voa/1040808.md)
-
-5-14 [又有一组科学家呼吁对新冠病毒起源进行更深入的调查](/articles/voa/1040809.md)
-
-5-14 [美国贸易代表：有关中国贸易政策的审议“时间至关重要”](/articles/voa/1040810.md)
 
