--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-28 [大午案庭前会议结束  孙大午痛哭愿承担一切罪责](/articles/rfa/1045473.md)
+
+5-28 [异议青年王靖渝迪拜获释   美国关注中国人权](/articles/rfa/1045474.md)
+
+5-28 [独立学者王康逝世一周年之际 纪念文集在美出版](/articles/rfa/1045475.md)
+
 5-28 [协调对华政策   美国拜登政府与欧盟首次高层对话](/articles/rfa/1045476.md)
 
 5-28 [边巴次仁就任西藏流亡政府领袖 盼促成达赖喇嘛访中](/articles/rfa/1045477.md)
@@ -594,10 +600,4 @@
 4-25 [“奶茶联盟为自由”：泰缅港台人士旧金山集会  联手反对极权专制](/articles/rfa/1045771.md)
 
 4-24 [孙大午等高管被全数批捕  外加新罪名](/articles/rfa/1045772.md)
-
-4-24 [失踪近26年  美吁中国公布班禅喇嘛下落](/articles/rfa/1045773.md)
-
-4-24 [美国立法保护亚裔 跪杀非裔警察被定罪 中国可会反省？](/articles/rfa/1045774.md)
-
-4-24 [居住新疆10年的加拿大夫妇  见证维吾尔人遭迫害](/articles/rfa/1045775.md)
 
