--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-28 [国药疫苗效力逾七成  美国会两议案针对武毒所](/articles/rfa/1045471.md)
+
+5-28 [四十六名武汉访民联署  控诉黑监狱如同“纳粹集中营”](/articles/rfa/1045472.md)
+
 5-28 [大午案庭前会议结束  孙大午痛哭愿承担一切罪责](/articles/rfa/1045473.md)
 
 5-28 [异议青年王靖渝迪拜获释   美国关注中国人权](/articles/rfa/1045474.md)
@@ -596,8 +600,4 @@
 4-26 [台湾长老教会遭港屏蔽 黄春生牧师叹香港已“内地化”](/articles/rfa/1045769.md)
 
 4-26 [哈萨克反中情绪升温   在野党联合抗议“一带一路”](/articles/rfa/1045770.md)
-
-4-25 [“奶茶联盟为自由”：泰缅港台人士旧金山集会  联手反对极权专制](/articles/rfa/1045771.md)
-
-4-24 [孙大午等高管被全数批捕  外加新罪名](/articles/rfa/1045772.md)
 
