--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-28 [美国敦促世卫组织继续病毒调查](/articles/voa/1040504.md)
+
+5-28 [加州枪击案凶手打死九人后自杀 警方正在继续调查](/articles/voa/1040505.md)
+
+5-28 [藏人流亡政府新领导人宣誓就职 表示愿与中国政府接触](/articles/voa/1040506.md)
+
 5-28 [美国失业救助申领数量连续第四个星期回落](/articles/voa/1040507.md)
 
 5-28 [美国防预算增加针对中国的威慑开支](/articles/voa/1040508.md)
@@ -594,10 +600,4 @@
 5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040802.md)
 
 5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040803.md)
-
-5-14 [合成照借古讽今 中共反西方宣传是否奏效？](/articles/voa/1040804.md)
-
-5-14 [美参院两党齐声呼吁抗中 鲁比奥：输了就是世纪耻辱等着我们](/articles/voa/1040805.md)
-
-5-14 [拜登政府拟为国际创业者开大门 料将吸引大批中国人申请](/articles/voa/1040806.md)
 
