--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-28 [布林肯谴责中国制裁美宗教领袖 摩尔：中共所为终将失败](/articles/voa/1040501.md)
+
+5-28 [马克龙访问卢旺达 承认法国对1994年种族灭绝事件负有政治责任](/articles/voa/1040502.md)
+
+5-28 [抗衡中国的一揽子立法接近获参院通过](/articles/voa/1040503.md)
+
 5-28 [美国敦促世卫组织继续病毒调查](/articles/voa/1040504.md)
 
 5-28 [加州枪击案凶手打死九人后自杀 警方正在继续调查](/articles/voa/1040505.md)
@@ -594,10 +600,4 @@
 5-15 [美国燃油管道公司据称已向黑客支付500万美元赎金](/articles/voa/1040799.md)
 
 5-14 [菲律宾鼓励渔民在中国宣布的休渔期进入渔场作业](/articles/voa/1040800.md)
-
-5-14 [疫情升温 新港旅游泡泡可能破裂](/articles/voa/1040801.md)
-
-5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040802.md)
-
-5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040803.md)
 
