--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-28 [简报：香港再度禁止六四烛光晚会；美国据信掌握未经审阅的新冠起源情报](/articles/nyt/1046808.md)
+
+5-28 [美中第一阶段贸易协定的成效与未来](/articles/nyt/1046809.md)
+
 5-27 [移民何苦“为难”移民](/articles/nyt/1046810.md)
 
 5-27 [香港的新型罪犯：亲民主活动人士](/articles/nyt/1046811.md)
@@ -596,8 +600,4 @@
 3-8 [赵小兰未能成行的访华之旅背后：公私不分引发伦理审查](/articles/nyt/1047106.md)
 
 3-8 [中国对部分海外旅客进行肛拭子检测，引发外国政府抗议](/articles/nyt/1047107.md)
-
-3-8 [赵婷被指“辱华”，《无依之地》在中国遭抵制审查](/articles/nyt/1047108.md)
-
-3-8 [简报：《无依之地》在中国遭抵制；微软称遭中国黑客攻击](/articles/nyt/1047109.md)
 
