--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-28 [维也纳的乐声、圣矛和纽伦堡的名歌手](/articles/ft/1045556.md)
+
+5-28 [美国人口变化会有利于共和党吗？](/articles/ft/1045557.md)
+
 5-28 [每周时事分析：拜登正式以新冠病毒溯源调查遏制中国](/articles/ft/1045558.md)
 
 5-28 [两家欧洲航空公司取消莫斯科航班 欧盟考虑进一步制裁白俄罗斯](/articles/ft/1045559.md)
@@ -596,8 +600,4 @@
 3-25 [字节跳动加码进军游戏领域](/articles/ft/1045854.md)
 
 3-25 [2021年美元反转及其影响](/articles/ft/1045855.md)
-
-3-25 [比特币会挑战美元霸权的地位吗？](/articles/ft/1045856.md)
-
-3-24 [巨型集装箱船搁浅 堵塞苏伊士运河](/articles/ft/1045857.md)
 
