--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-28 [《老友记：重聚》：当我们怀旧时，我们在怀念什么](/articles/nyt/1046807.md)
+
 5-28 [简报：香港再度禁止六四烛光晚会；美国据信掌握未经审阅的新冠起源情报](/articles/nyt/1046808.md)
 
 5-28 [美中第一阶段贸易协定的成效与未来](/articles/nyt/1046809.md)
@@ -598,6 +600,4 @@
 3-8 [公益人士顾陈晋明逝世，曾参与“春蕾计划”资助贫困女童](/articles/nyt/1047105.md)
 
 3-8 [赵小兰未能成行的访华之旅背后：公私不分引发伦理审查](/articles/nyt/1047106.md)
-
-3-8 [中国对部分海外旅客进行肛拭子检测，引发外国政府抗议](/articles/nyt/1047107.md)
 
